--- a/index.html
+++ b/index.html
@@ -12,5 +12,92 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <div class="container">
+    <nav class="nav">
+      <div class="links">
+        <a class="nav-link" href="">Services</a>
+        <a class="nav-link" href="">Product</a>
+        <a class="nav-link" href="">Vision</a>
+        <a class="nav-link" href="">Features</a>
+        <a class="nav-link" href="">About</a>
+        <a class="nav-link" href="">Contact</a>
+      </div>
+      <div class="logo-section">
+        <img class="logo"
+          src="https://raw.githubusercontent.com/djtorel/User-Interface/master/great-idea-website/img/logo.png"
+          alt="Great Idea! Company logo." />
+      </div>
+    </nav>
+
+    <header class="header">
+      <div class="header-left">
+        <h1 class="main-header">
+          Innovation On Demand
+        </h1>
+        <div class="header-button">
+          <button class="btn-get-started" href="">Get Started</button>
+        </div>
+      </div>
+
+      <img class="img-header"
+        src="https://raw.githubusercontent.com/djtorel/User-Interface/master/great-idea-website/img/header-img.png"
+        alt="Image of a code snippet." />
+    </header>
+
+    <section>
+      <div class="top-section-item left">
+        <h2>Features</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu
+          ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="top-section-item right">
+        <h2>About</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu</p>
+      </div>
+    </section>
+
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen" />
+
+    <section>
+      <div class="bottom-section-item first-item">
+        <h2>Services</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu
+          ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="bottom-section-item">
+        <h2>Product</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu
+          ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="bottom-section-item">
+        <h2>Vision</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu
+          ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </section>
+
+    <section class="contact-section">
+      <h2>Contact</h2>
+      <address>
+        <p>
+          123 Way 456 Street <br />
+          Somewhere, USA
+        </p>
+      </address>
+
+      <p>1 (888) 888-8888</p>
+
+      <p>sales@greatidea.io</p>
+    </section>
+
+    <footer class="footer">
+      <p>Copyright Great Idea! 2018</p>
+    </footer>
+</div>
 </body>
 </html>
