--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0>`rt
-  <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+  <meta charset=" utf-8">
+
+  <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
 </head>
 
+<!-- Copy and paste your HTML from the first UI project here -->
+
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
   <div class="container">
     <nav class="nav">
       <div class="links">
-        <a class="nav-link" href="">Services</a>
+        <a class="nav-link" href="services.html">Services</a>
         <a class="nav-link" href="">Product</a>
         <a class="nav-link" href="">Vision</a>
         <a class="nav-link" href="">Features</a>
         <a class="nav-link" href="">About</a>
         <a class="nav-link" href="">Contact</a>
-      </div>
-      <div class="logo-section">
         <img class="logo"
           src="https://raw.githubusercontent.com/djtorel/User-Interface/master/great-idea-website/img/logo.png"
           alt="Great Idea! Company logo." />
@@ -34,25 +38,26 @@
       <div class="header-left">
         <h1 class="main-header">
           Innovation On Demand
-        </h1>
-        <div class="header-button">
           <button class="btn-get-started" href="">Get Started</button>
-        </div>
-      </div>
+        </h1>
 
-      <img class="img-header"
-        src="https://raw.githubusercontent.com/djtorel/User-Interface/master/great-idea-website/img/header-img.png"
-        alt="Image of a code snippet." />
+        <div class="code-logo">
+          <img class="img-header"
+            src="https://raw.githubusercontent.com/djtorel/User-Interface/master/great-idea-website/img/header-img.png"
+            alt="Image of a code snippet." />
+        </div>
+
+      </div>
     </header>
 
-    <section>
-      <div class="top-section-item left">
+    <section class="top-final">
+      <div class="top-section-item-left">
         <h2>Features</h2>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu
           ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
-      <div class="top-section-item right">
+      <div class="top-section-item-right">
         <h2>About</h2>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
           Suspendisse eu</p>
@@ -61,24 +66,30 @@
 
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen" />
 
-    <section>
-      <div class="bottom-section-item first-item">
-        <h2>Services</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-          Suspendisse eu
-          ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    <section class="bottom-final">
+      <div>
+        <div class="bottom-section-first-item">
+          <h2>Services</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
       </div>
-      <div class="bottom-section-item">
-        <h2>Product</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-          Suspendisse eu
-          ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      <div>
+        <div class="bottom-section-second-item">
+          <h2>Product</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
       </div>
-      <div class="bottom-section-item">
-        <h2>Vision</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-          Suspendisse eu
-          ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      <div>
+        <div class="bottom-section-third-item">
+          <h2>Vision</h2>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
       </div>
     </section>
 
@@ -99,6 +110,8 @@
     <footer class="footer">
       <p>Copyright Great Idea! 2018</p>
     </footer>
-</div>
+  </div>
+
 </body>
+
 </html>
