--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         <a class="nav-link" href="">Features</a>
         <a class="nav-link" href="">About</a>
         <a class="nav-link" href="">Contact</a>
-        <img class="logo"
-          src="https://raw.githubusercontent.com/djtorel/User-Interface/master/great-idea-website/img/logo.png"
-          alt="Great Idea! Company logo." />
       </div>
+        <img class="logo" src="https://raw.githubusercontent.com/djtorel/User-Interface/master/great-idea-website/img/logo.png"
+        alt="Great Idea! Company logo." />
     </nav>
 
     <header class="header">
